attempt to fix build issues